# django-challenge-001

./: .env  .env.prod  .flake8  .gitignore  Dockerfile  README.md  django-challenge-001.postman_collection.json  djnago-challenge-001.postman_collection.json  docker-compose.prod.yml  docker-compose.yml  prod.yml  pyproject.toml
app/app/: settings.py  urls.py
app/article/: models.py  serializers.py  urls.py  views.py
app/article/docs/: schemas.py
app/article/migrations/: 0001_initial.py  0002_auto_20210520_1733.py  0003_auto_20210520_2023.py  0004_auto_20210520_2035.py
app/article/tests/: test_models.py  test_views.py
app/author/: models.py  serializers.py  urls.py  views.py
app/author/docs/: schemas.py
app/author/migrations/: 0001_initial.py
app/author/tests/: test_models.py  test_views.py
app/user/: models.py  serializers.py  urls.py  views.py
app/user/docs/: schemas.py
app/user/migrations/: 0001_initial.py
app/user/tests/: test_models.py  test_views.py
nginx/: nginx.conf
